--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,19 @@
 obj_sky/
+obj_srf06-cc26xx/
+obj_openmote-cc2538/
+testscript.py
+Makefile.target
 symbols.c
 symbols.h
 basim.csc
-sink.sky
-node.sky
 contiki-sky.a
-contiki-sky.map
 basim.csc
 notes
 program_script.py
-node.elf
-node.hex
-node.openmote-cc2538
-obj_srf06-cc26xx/
-sink.elf
-obj_openmote-cc2538/
-testscript.py
-node.srf06-cc26xx
-sink.hex
-sink.openmote-cc2538
-sink.srf06-cc26xx
-Makefile.target
+*.map
+*.sky
+*.srf06-cc26xx
+*.elf
+*.hex
+*.bin
+*.openmote-cc2538
